objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>lead process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed - Converted</fullName>
        </values>
        <values>
            <fullName>Closed - Not Converted</fullName>
        </values>
        <values>
            <fullName>Working - Contacted</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>lead process 2</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed - Converted</fullName>
        </values>
        <values>
            <fullName>Open - Not Contacted</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <label>Primary</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProductInterest__c</fullName>
        <label>Product Interest</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GC1000 series</fullName>
                </value>
                <value>
                    <fullName>GC5000 series</fullName>
                </value>
                <value>
                    <fullName>GC3000 series</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SICCode__c</fullName>
        <label>SIC Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <recordTypes>
        <fullName>lead_layout_2</fullName>
        <active>true</active>
        <businessProcess>lead process 2</businessProcess>
        <label>lead layout 2</label>
    </recordTypes>
    <recordTypes>
        <fullName>lead_process</fullName>
        <active>true</active>
        <businessProcess>lead process</businessProcess>
        <label>lead process</label>
    </recordTypes>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <validationRules>
        <fullName>Apex_transaction_company_validationrule</fullName>
        <active>false</active>
        <errorConditionFormula>UPPER(Company)   != &apos;SFDC&apos;</errorConditionFormula>
        <errorDisplayField>Company</errorDisplayField>
        <errorMessage>U cannot add another company naame except &apos;SFDC&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>email_validation</fullName>
        <active>false</active>
        <description>validates last 4 letters should be proper</description>
        <errorConditionFormula>and
(RIGHT( Email , 4) &lt;&gt; &quot;.com&quot;,
RIGHT( Email , 4)  &lt;&gt; &quot;.COM&quot;,
RIGHT( Email , 4)  &lt;&gt; &quot;.org&quot;,
RIGHT( Email , 4)  &lt;&gt; &quot;.ORG&quot;,
RIGHT( Email , 4)  &lt;&gt; &quot;.NET&quot;,
RIGHT( Email , 4)  &lt;&gt; &quot;.net&quot;)</errorConditionFormula>
        <errorDisplayField>Email</errorDisplayField>
        <errorMessage>Enter in proper domain eg:.com,.net, etc</errorMessage>
    </validationRules>
</CustomObject>